# whisper-bot

./: .env.example  Dockerfile  README.md  pyproject.toml
src/whisper_bot/: bot.py  handlers.py  run.py  whisper.py
